regression/parse_pool/progtest17.sfp.out

sfc in program parse_pool/progtest17.sfp
syntax error at line 2, position 61:
configuration foo { nullApp() nullNet() nullMac() nullRadio }
                                                            ^
